Added support for Canon PIXMA MG3500 series (MG3510, MG3520, MG3530, MG3540, MG3550, MG3560, MG3570). Not sure whether duplex works with existing commands.

--- a/NEWS
+++ b/NEWS
@@ -527,6 +527,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG3260  (EXPERIMENTAL)(*2)
        Canon PIXMA MG3270  (EXPERIMENTAL)(*2)
 
+       Canon MG3500 series (EXPERIMENTAL)
+       Canon PIXMA MG3510  (EXPERIMENTAL)
+       Canon PIXMA MG3520  (EXPERIMENTAL)
+       Canon PIXMA MG3530  (EXPERIMENTAL)
+       Canon PIXMA MG3540  (EXPERIMENTAL)
+       Canon PIXMA MG3550  (EXPERIMENTAL)
+       Canon PIXMA MG3560  (EXPERIMENTAL)
+       Canon PIXMA MG3570  (EXPERIMENTAL)
+
        Canon MG4100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG4110  (EXPERIMENTAL)(*2)
        Canon PIXMA MG4120  (EXPERIMENTAL)(*2)
