Added support for Canon MG5500 series (MG5520, MG5522, MG5530, MG5540, MG5550, MG5570) and MG6400 series (MG6410, MG6420, MG6440, MG6450, MG6470). Fixed duplex choices for Canon MG3500. Removed two compiler warnings from print-canon.c (comment style and declaration with assignment)

--- a/NEWS
+++ b/NEWS
@@ -593,6 +593,14 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG5470  (EXPERIMENTAL)(*2)
        Canon PIXMA MG5480  (EXPERIMENTAL)(*2)
 
+       Canon MG5500 series (EXPERIMENTAL)
+       Canon PIXMA MG5520  (EXPERIMENTAL)
+       Canon PIXMA MG5522  (EXPERIMENTAL)
+       Canon PIXUS MG5530  (EXPERIMENTAL)
+       Canon PIXMA MG5540  (EXPERIMENTAL)
+       Canon PIXMA MG5550  (EXPERIMENTAL)
+       Canon PIXMA MG5570  (EXPERIMENTAL)
+
        Canon MG6100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG6110  (EXPERIMENTAL)(*2)
        Canon PIXMA MG6120  (EXPERIMENTAL)(*2)
@@ -620,6 +628,13 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG6360  (EXPERIMENTAL)(*2)
        Canon PIXMA MG6370  (EXPERIMENTAL)(*2)
        Canon PIXMA MG6380  (EXPERIMENTAL)(*2)
+
+       Canon MG6400 series (EXPERIMENTAL)
+       Canon PIXMA MG6410  (EXPERIMENTAL)
+       Canon PIXMA MG6420  (EXPERIMENTAL)
+       Canon PIXMA MG6440  (EXPERIMENTAL)
+       Canon PIXMA MG6450  (EXPERIMENTAL)
+       Canon PIXMA MG6470  (EXPERIMENTAL)
 
        Canon MG8100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG8120  (EXPERIMENTAL)(*2)
