Added experimental support for Canon MG6500 line (MG6530) and MG7100 line (MG7110, MG7120, MG7130, MG7140, MG7150, MG7170). Made some changes to FineArt A4, Letter, A3 media papersize code replacement (further changes to be made as codes confirmed on relevant printer models).

--- a/NEWS
+++ b/NEWS
@@ -636,6 +636,17 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG6450  (EXPERIMENTAL)
        Canon PIXMA MG6470  (EXPERIMENTAL)
 
+       Canon MG6500 series (EXPERIMENTAL)
+       Canon PIXMA MG6530  (EXPERIMENTAL)
+
+       Canon MG7100 series (EXPERIMENTAL)
+       Canon PIXMA MG7110  (EXPERIMENTAL)
+       Canon PIXMA MG7120  (EXPERIMENTAL)
+       Canon PIXUS MG7130  (EXPERIMENTAL)
+       Canon PIXMA MG7140  (EXPERIMENTAL)
+       Canon PIXMA MG7150  (EXPERIMENTAL)
+       Canon PIXMA MG7170  (EXPERIMENTAL)
+
        Canon MG8100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG8120  (EXPERIMENTAL)(*2)
        Canon PIXUS MG8130  (EXPERIMENTAL)(*2)
