Corrected Canon MG6530 and MG7130 names to PIXUS.

--- a/NEWS
+++ b/NEWS
@@ -637,7 +637,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG6470  (EXPERIMENTAL)
 
        Canon MG6500 series (EXPERIMENTAL)
-       Canon PIXMA MG6530  (EXPERIMENTAL)
+       Canon PIXUS MG6530  (EXPERIMENTAL)
 
        Canon MG7100 series (EXPERIMENTAL)
        Canon PIXMA MG7110  (EXPERIMENTAL)
