printers.xml:  Add IEEE1284 ID for Kodak 605

--- a/NEWS
+++ b/NEWS
@@ -1189,6 +1189,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Device IDs added for the following Kodak printers:
        Kodak 1400
+       Kodak 605
        Kodak 805
        Kodak 6800
        Kodak 6850
