--- a/NEWS
+++ b/NEWS
@@ -1068,10 +1068,14 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Mitsubishi CP9550D/DW    (EXPERIMENTAL)
        Mitsubishi CPD70D/DW     (EXPERIMENTAL)
        Mitsubishi CPD707D/DW    (EXPERIMENTAL)
-       Mitsubishi CPS60DW       (EXPERIMENTAL)
+       Mitsubishi CPK60DW       (EXPERIMENTAL)
 
 	None of these models have been tested and confirmed to work 
 	(or not), so feedback is welcome.
+
+	NOTE: With the exception of the CP-K60DW-S, all Mitsubishi
+	printers with red faceplates and/or model designations ending with 
+	an '-S' suffix are not supported.
 
      - Kodak Dye-Sublimation printers:
 
