--- a/NEWS
+++ b/NEWS
@@ -1118,10 +1118,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        DNP DS40
        DNP DS80
 
-        Support for these printers were improved; with firmware 1.30 or
-	newer, lamination mode is now configurable.  The DS40 also 
- 	gained the ability to create 5x7" and 3.5x5" prints with
-	appropriate media.
+	Support for these printers has been considerably improved through
+	the addition of an intelligent CUPS backend.
+
+	Improved margin specifications has enabled support for 3.5x5" and 
+	5x7" prints on the DS40 and made the printable area more 
+	explicit on other print sizes on both printers.
+
+	Finally, with printer firmware 1.30 or newer, Matte lamination is
+	now supported.
 
   2) The following Canon printer models were not added, as they cannot
      currently be supported, even experimentally, owing to an as-yet
