--- a/NEWS
+++ b/NEWS
@@ -255,7 +255,37 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
 * Changes from 5.2.9
 
-  1) New printers supported in this release:
+  1) Added a unified CUPS backend to support selected dye sublimation
+     printers.
+
+     A new CUPS backend was added to support USB printers that require a
+     special communications protocol. The backend is called 
+     'gutenprint52usb' and requires libusbx in order to build.  
+
+     The following dye-sublimation printers require this backend in order
+     to function properly:
+
+        Canon SELPHY ES series  (All models)
+	Canon SELPHY CP series  (All models)
+	Kodak Professional 1400
+	Kodak 805 Photo Printer
+   	Kodak 6800 Photo Printer
+   	Kodak 6850 Photo Printer
+	Kodak 605 Photo Printer
+   	Shinko/Sinfonia CHC-S2145 
+   	Sony UP-DR150
+	DNP DS40
+	DNP DS80
+
+     Over time, it is expected that additional printer models will be
+     supported by this unified backend.
+
+     Please note that unless you are using CUPS > 1.6.4, you may have to
+     manually select the gutenprint CUPS backend when configuring one of
+     these printers.  They will not function properly with the default
+     'usb' backend.
+
+  2) New printers supported in this release:
 
      - Epson inkjets:
 
@@ -1126,8 +1156,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	 * Improved margins making printable area more explicit
 	 * Support 300x600dpi print mode
 
-
-  2) The following Canon printer models were not added, as they cannot
+  3) The following Canon printer models were not added, as they cannot
      currently be supported, even experimentally, owing to an as-yet
      unknown command format or other issues:
 
@@ -1142,12 +1171,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
        *1: protocol is supported but inks used are not yet supported
 
-  3) Corrected page dimensions for borderless printing with Canon
+  4) Corrected page dimensions for borderless printing with Canon
      printers.
 
-  4) Added duplex support for the EPSON WorkForce 645.
+  5) Added duplex support for the EPSON WorkForce 645.
 
-  5) Added IEEE1284 device IDs for the following printers.
+  6) Added IEEE1284 device IDs for the following printers.
 
      - Device IDs added for the following Canon printers:
        Canon SELPHY ES1
@@ -1226,36 +1255,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        DNP DS40
        DNP DS80
 
-  6) Added Catalan and Turkish translations.
-
-  7) Added a unified CUPS backend to support selected printers
-
-     A new CUPS backend was added to support USB printers that require a
-     special communications protocol. The backend is called 
-     'gutenprint52usb' and requires libusbx in order to build.  
-
-     The following dye-sublimation printers require this backend in order
-     to function properly:
-
-        Canon SELPHY ES series  (All models)
-	Canon SELPHY CP series  (All models)
-	Kodak Professional 1400
-	Kodak 805 Photo Printer
-   	Kodak 6800 Photo Printer
-   	Kodak 6850 Photo Printer
-	Kodak 605 Photo Printer
-   	Shinko/Sinfonia CHC-S2145 
-   	Sony UP-DR150
-	DNP DS40
-	DNP DS80
-
-     Over time, it is expected that additional printer models will be
-     supported by this unified backend.
-
-     Please note that unless you are using CUPS > 1.6.4, you may have to
-     manually select the gutenprint CUPS backend when configuring one of
-     these printers.  They will not function properly with the default
-     'usb' backend.
+  7) Added Catalan and Turkish translations.
 
 * Changes from 5.2.8
 
