Added Canon SELPHY ES40 IEEE1284 deviceID

--- a/NEWS
+++ b/NEWS
@@ -1183,6 +1183,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY ES2
        Canon SELPHY ES3
        Canon SELPHY ES30
+       Canon SELPHY ES40
        Canon SELPHY CP-100
        Canon SELPHY CP-200
        Canon SELPHY CP-220
@@ -1201,7 +1202,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4000 (possibly incomplete)
        Canon PIXMA iP4200 (possibly incomplete)
        Canon Pro9000 II series (possibly incomplete)
-       Canon MP160 (possibly incomplete)
+       Canon MP160
        Canon MP250 series
        Canon MP280 series (possibly incomplete)
        Canon MP450 series
