Add Vietnamese translation

--- a/NEWS
+++ b/NEWS
@@ -1260,7 +1260,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        DNP DS40
        DNP DS80
 
-  8) Added Catalan and Turkish translations.
+  8) Added Catalan, Turkish, and Vietnamese translations.
 
 * Changes from 5.2.8
 
