Added IEEE 1284 deviceID for Canon SELPHY CP790

--- a/NEWS
+++ b/NEWS
@@ -1206,6 +1206,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY CP750
        Canon SELPHY CP760
        Canon SELPHY CP780
+       Canon SELPHY CP790
        Canon SELPHY CP800
        Canon SELPHY CP810
        Canon iP2700 series
