--- a/NEWS
+++ b/NEWS
@@ -274,11 +274,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	Kodak 605 Photo Printer
    	Shinko/Sinfonia CHC-S2145 
    	Sony UP-DR150
+        Sony UP-DR200
 	DNP DS40
 	DNP DS80
 
      Over time, it is expected that additional printer models will be
-     supported by this unified backend.
+     supported by this backend.
 
      Please note that unless you are using Linux with CUPS >= 1.6.4, you 
      may have to manually select the gutenprint CUPS backend when 
@@ -1145,10 +1146,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	Support for the Sony UP-DR150 was greatly improved through the
 	addition of an intelligent CUPS backend.
 
-       Sony UP-DR200 (EXPERIMENTAL)
+       Sony UP-DR200
 
-        Experimental support for the Sony UP-DR200 was added; it is as
-	of yet untested.
+	The Sony UP-DR200 requires the use of an intelligent CUPS backend.
 
      - Dai Nippon Printing (DNP) printers:
 
