The Mitsubishi CP-3800DW is a rebadged version of the DNP DS80.
Initial investigations show it's compatible at the command stream level,
but it probably needs the USB backend of the DS40/DS80 to work properly.

Mark it as theoretically supported, but untested.

--- a/NEWS
+++ b/NEWS
@@ -1107,6 +1107,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Mitsubishi CPD70D/DW     (EXPERIMENTAL)
        Mitsubishi CPD707D/DW    (EXPERIMENTAL)
        Mitsubishi CPK60DW       (EXPERIMENTAL)
+       Mitsubishi CP3800DW     (EXPERIMENTAL)
 
 	None of these models have been tested and confirmed to work 
 	(or not), so feedback is welcome.
