Add support for Epson CX7300

--- a/NEWS
+++ b/NEWS
@@ -296,6 +296,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
        EPSON Stylus TX125
        EPSON Stylus C92
+       EPSON Stylus CX7300
        EPSON Stylus D78
        EPSON Stylus SX445W
        EPSON WorkForce WF-7010 (EXPERIMENTAL)
