Add info about the dyesub backend into the README file.  And a couple of minor corrections in the NEWS file.

--- a/NEWS
+++ b/NEWS
@@ -266,7 +266,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      to function properly:
 
         Canon SELPHY ES series  (All models)
-	Canon SELPHY CP series  (All models)
+	Canon SELPHY CP series  (All models except CP520, CP820, and CP910)
 	Kodak Professional 1400
 	Kodak 805 Photo Printer
    	Kodak 6800 Photo Printer
