--- a/README
+++ b/README
@@ -91,6 +91,7 @@ A) OVERVIEW
       - A Ghostscript driver using the IJS plugin facility
       - A command-line utility to administer and maintain Epson
         printers
+      - A CUPS backend for selected dye-sublimation printers
 
     This package requires the use of GNU Make to compile.  On systems
     with both GNU make and another make installed, GNU make may be
@@ -122,7 +123,7 @@ A) OVERVIEW
 	gimp-print-devel@lists.sourceforge.net
 
 	================================================================
-	  Release: gutenprint 5.2.10 generated on 04 Jan 2014
+	  Release: gutenprint 5.2.10 generated on 08 Feb 2014
 
 	  Features:
 	    Build CUPS:                                 yes, installing in /usr
@@ -130,7 +131,7 @@ A) OVERVIEW
 		Build CUPS PPD files:                   no
 		Generate PS level 3 CUPS PPD files:     yes
 		Build genppd statically:                yes
-	    Build CUPS spoolers/backends:               yes
+		Build CUPS dyesub USB backend:          yes
 	    Build Ghostscript IJS driver:               no
 	    Build Foomatic data:                        yes
 		Build Foomatic 3.x data:                yes
@@ -176,10 +177,11 @@ A) OVERVIEW
 
     PLEASE INSPECT THE OUTPUT CAREFULLY BEFORE PROCEEDING.  If you
     expect to build a particular component (particularly the CUPS
-    driver or enhanced Print plugin for GIMP), and the configure
-    output states that that component will not be built, please make
-    certain that you have the required development packages installed,
-    as described below in the sections for the particular components.
+    driver, CUPS backends, or enhanced Print plugin for GIMP), and 
+    the configure output states that that component will not be built,
+    please make certain that you have the required development packages
+    installed, as described below in the sections for the particular
+    components.
 
 
 ----------------
@@ -662,6 +664,95 @@ F) ESCPUTIL
     to link against; the exact sequence is described in the release
     notes.  If you do not wish to use readline, you may use
     --without-readline.
+
+
+----------------
+
+G) CUPS dye-sublimation backend
+
+    A new CUPS backend was added to support USB printers that require a
+    special communications protocol. The backend is called 
+    'gutenprint52usb' and requires libusb 1.x in order to build.  We 
+    recommend libusb 1.0.13 or newer, although older versions will function
+    with reduced functionality (see note below).
+
+    The following dye-sublimation printers require this backend in order
+    to function properly:
+
+        Canon SELPHY ES series  (All models)
+        Canon SELPHY CP series  (All models except CP520, CP820 and CP910)
+        Kodak Professional 1400
+        Kodak 805 Photo Printer
+        Kodak 6800 Photo Printer
+        Kodak 6850 Photo Printer
+        Kodak 605 Photo Printer
+        Shinko/Sinfonia CHC-S2145 
+        Sony UP-DR150
+        Sony UP-DR200
+        DNP DS40
+        DNP DS80
+        DNP DS-RX1
+        Citizen CX
+        Citizen CX-W
+        Citizen CY
+
+    Over time, it is expected that additional printer models will be
+    supported by this backend.
+
+    Although these printers advertise themselves as standard USB Printer
+    Class devices, they do not actually obey those specifications, and
+    require two-way handshaking in order to successfully print.
+
+    If you do not have one of the printers listed above, this backend is
+    not relevant for you and you can just ignore everything below.
+
+    Once Gutenprint and this backend are installed, if you are using 
+    up-to-date versions of CUPS (1.6.4 or newer) on Linux, then your 
+    system will automatically select this backend if you plug in one of its 
+    supported printers.  No further intervention on the user's part should
+    be necessary.
+
+    Unfortunately, if you are using an older version of CUPS or a non-Linux
+    system (particularly OSX) then you will need to manually configure the
+    use of this backend, as the system will automatically attempt to use the
+    default backend which does not work with these printers.
+ 
+    To do this, you will need to remove the printer that was automatically
+    added by your system then manually add a new one, taking care to select
+    the correct backend ("gutenprint52+usb").  Instructions on how to do this
+    are beyond the scope of this document; please see the CUPS documentation.
+
+    Once the printer is properly configured, this backend will be 
+    automatically invoked as needed; the user will never invoke the backend
+    directly.
+
+       NOTE ON PRINTERS WITHOUT SERIAL NUMBERS:
+
+    If your CUPS queue URI reports a serial number of 'Bxxx_Dyyy' then
+    your printer does not export a proper serial number, and was assigned 
+    a fake serial number based on the logical USB bus and device 
+    enumeration.  For example, 'B002_D007' means the printer was detected
+    on logical bus 2, and assigned device id 7.
+
+    This has the unfortunate side-effect of possibly rendering the queue 
+    nonoperational if the printer is moved to a different port, as it may
+    be enumerated differently.
+
+       NOTE ON LIBUSB COMPATIBILITY:
+
+    If your printer does not export a serial number (see above), and 
+    your URI reports a serial number ending in 'P255' then you are also
+    using an version of libusb older than 1.0.13.
+
+    Older versions do not provide a way to determine the full USB
+    topology, so unless you have at least 1.0.13, we cannot distinguish 
+    between multiple printers of the same type (or family) plugged in
+    simultaneously.  
+
+    If your printer exports a serial number, then this problem will not
+    affect you and you can simultaneously use multiple printers of the same
+    type no matter what version of libusb you are using.
+
 
 
 ================================================================
